<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="match_parent"
	android:padding="40dp">

	<TextView android:id="@+id/goodMorningTV"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
		android:gravity="center" android:text="@string/good_morning_sunshine"
		android:textSize="@dimen/w_good_morning_text_size" />

	<TextView android:id="@+id/goodMorning1TV"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" android:layout_below="@+id/goodMorningTV"
		android:layout_marginTop="20dp" android:gravity="center"
		android:text="@string/press_nfc_to_disable" android:textSize="18dp"
		android:alpha="0.6" />

	<ProgressBar android:id="@+id/snoozePB"
		style="?android:attr/progressBarStyleHorizontal" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_centerHorizontal="true"
		android:layout_centerVertical="true" android:layout_marginLeft="@dimen/w_snooze_progress_margin_left" android:layout_marginRight="@dimen/w_snooze_progress_margin_right" />

	<Button android:id="@+id/snoozeBTN" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_below="@+id/snoozePB"
		android:layout_centerHorizontal="true" android:text="@string/snooze" android:onClick="onSnooze" style="@style/button" />

</RelativeLayout>